fix word wrapping in todoitem.js

--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,11 @@ body {
   color: #b4b7bd;
   padding: 5rem 13rem;
   height: 100vh;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
-@media (max-width: 900px) {
+/* @media (max-width: 900px) {
   body {
     padding: 3rem;
   }
@@ -21,7 +23,7 @@ body {
   body {
     padding: 1rem;
   }
-}
+} */
 
 #root {
   height: 100%;
@@ -32,6 +34,12 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+@media (min-width: 768px) {
+  .layout {
+    background-position: right;
+  }
 }
 
 .modal {
@@ -47,6 +55,7 @@ body {
   border: 1px solid #676d7d60;
   border-radius: 0.2rem;
   padding: 0.25rem 1rem;
+  word-wrap: break-word;
 }
 
 @layer components {
